--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -1,3 +1,28 @@
-!private/
-!public/uploads
-!.gitignore
+*.log
+.DS_Store
+.env
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+Homestead.json
+Homestead.yaml
+npm-debug.log
+Thumbs.db
+yarn-error.log
+/public/uploads
+storage/app/public/*
+/storage/app/firebase
+
